fix yellow background and text align

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
@@ -22,7 +22,7 @@ h1 {
 
 .example, h3 {
   padding-top: 30px;
-  text-align center;
+  text-align: center;
 }
 
 h3 {
